@@ -1,3 +1,7 @@
+2002-11-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+  * Verify sanity of sysconf(_SC_PAGE_SIZE) and sysconf(_SC_PHYS_PAGES)
+    before using their values.
+
 2002-11-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
   * Modified IMdisplay so that larger images may be loaded (primarily
     limited by Windows bitmap size limits).
